<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AGame</string>
    <string name="action_settings">Settings</string>
    <string name="help_settings">Help</string>
        
    <string name="button_level">Level</string>
    <string name="button_game">Start Game</string>
    <string name="button_highscore">Highscore</string>
    
    <string name="title_activity_main">Agame</string>
    <string name="title_activity_help">Help</string>  
    <string name="title_activity_game">AGame</string>
    <string name="title_activity_highscore">Highscore List</string>
    <string name="title_activity_level">Choose Level</string>
    
    <string name="help_text_game">Choose 2 cards, one from left and on from right, and click on them. Find cards that have the same value until finished. For example \'2+3\' and \'5\'. </string>
    <string name="help_text_level"> Level 1: Additions from 0 to 49 \nLevel 2: Additions from 50 to 99 \nLevel 3: Additions from 100 to 500</string>
    <string name="help_text_score">To see highscores choose the level you want to see in the action bar above.</string>
    
    <string name="level_one">Level 1</string>
    <string name="level_two">Level 2</string>
    <string name="level_three">Level 3</string>

    <string name="preference_file_one">PreferenceFileOne</string>
    <string name="preference_file_two">PreferenceFileTwo</string>
    <string name="preference_file_three">PreferenceFileThree</string>
    
    <string name="one">1.</string>
    <string name="two">2.</string>
    <string name="three">3.</string>
    <string name="four">4.</string>
    <string name="five">5.</string>
    
    <string name="delete_scores">Delete Highscores</string>
    
    <string name="button00"/>
    <string name="button01"/>
    <string name="button10"/>
    <string name="button11"/>
    <string name="button20"/>
    <string name="button21"/>
    <string name="button30"/>
    <string name="button31"/>
    <string name="button40"/>
    <string name="button41"/>
    <string name="button50"/>
    <string name="button51"/>
    <string name="button60"/>
    <string name="button61"/>
    <string name="button70"/>
    <string name="button71"/>          
    
    <string name="test">blablabla</string>

</resources>