<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

   <TableRow
        android:id="@+id/tableRow1"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button00"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onClickCard"
            android:tag="00"
            android:text="@string/button00" />


        <Button
            android:id="@+id/button01"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onClickCard"
            android:tag="01"
            android:text="@string/button01" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button10"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onClickCard"
            android:tag="10"
            android:text="@string/button10" />

        <Button
            android:id="@+id/button11"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onClickCard"
            android:tag="11"
            android:text="@string/button11" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button20"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onClickCard"
            android:tag="20"
            android:text="@string/button20" />

        <Button
            android:id="@+id/button21"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onClickCard"
            android:tag="21"
            android:text="@string/button21" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button30"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onClickCard"
            android:tag="30"
            android:text="@string/button30" />

        <Button
            android:id="@+id/button31"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onClickCard"
            android:tag="31"
            android:text="@string/button31" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button40"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onClickCard"
            android:tag="40"
            android:text="@string/button40" />

        <Button
            android:id="@+id/button41"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onClickCard"
            android:tag="41"
            android:text="@string/button41" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button50"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onClickCard"
            android:tag="50"
            android:text="@string/button50" />

        <Button
            android:id="@+id/button51"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onClickCard"
            android:tag="51"
            android:text="@string/button51" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow7"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button60"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onClickCard"
            android:tag="60"
            android:text="@string/button60" />

        <Button
            android:id="@+id/button61"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onClickCard"
            android:tag="61"
            android:text="@string/button61" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow8"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button70"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onClickCard"
            android:tag="70"
            android:text="@string/button70" />

        <Button
            android:id="@+id/button71"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onClickCard"
            android:tag="71"
            android:text="@string/button71" />

    </TableRow>

</TableLayout>