<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:scrollbars="vertical">

	<TableLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:stretchColumns="1" >
	
	    <TableRow
	        android:id="@+id/tableRow1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView 
				android:text="@string/one"
		        style="@style/HighscoreListNumbers">		
		        </TextView>
	   		<TextView
				android:id="@+id/text_one"
		        android:text="-"
		        style="@style/HighscoreListScores">
				</TextView>
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/tableRow2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
		    <TextView 
				android:text="@string/two"
		        style="@style/HighscoreListNumbers">		
		        </TextView>
	   		<TextView
				android:id="@+id/text_two"
		        android:text="-"
		        style="@style/HighscoreListScores">
				</TextView>
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/tableRow3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView 
				android:text="@string/three"
		        style="@style/HighscoreListNumbers">		
		        </TextView>
	   		<TextView
				android:id="@+id/text_three"
		        android:text="-"
		        style="@style/HighscoreListScores">
				</TextView>
	    </TableRow>
	
	        <TableRow
	        android:id="@+id/tableRow4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView 
				android:text="@string/four"
		        style="@style/HighscoreListNumbers">		
		        </TextView>
	   		<TextView
				android:id="@+id/text_four"
		        android:text="-"
		        style="@style/HighscoreListScores">
				</TextView>
	    </TableRow>
	    
	    <TableRow
	        android:id="@+id/tableRow5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView 
				android:text="@string/five"
		        style="@style/HighscoreListNumbers">		
		        </TextView>
	   		<TextView
				android:id="@+id/text_five"
		        android:text="-"
		        style="@style/HighscoreListScores">
				</TextView>
	    </TableRow>
	</TableLayout>
</ScrollView>